// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for ExtoleDestination's identifyUser destination action: all fields 1`] = `
Object {
  "email": "relji@wobaz.sy",
  "extole_app": "Segment Destination App",
  "extole_consumer_ip": "30!*QlOj18KV*T8h5Tt",
  "partner_anonymous_id": "30!*QlOj18KV*T8h5Tt",
  "partner_user_id": "30!*QlOj18KV*T8h5Tt",
  "traits": Object {
    "testType": "30!*QlOj18KV*T8h5Tt",
  },
}
`;

exports[`Testing snapshot for ExtoleDestination's identifyUser destination action: required fields 1`] = `
Object {
  "extole_app": "Segment Destination App",
  "partner_anonymous_id": "30!*QlOj18KV*T8h5Tt",
  "partner_user_id": "30!*QlOj18KV*T8h5Tt",
}
`;
